# AtlasSLB-Prospecting-Platform

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
atlas_slb/: asgi.py  urls.py  wsgi.py
atlas_slb/settings/: base.py
core/: enums.py  exceptions.py  logging.py
core/migrations/: 0001_initial.py
docs/: schema_v1.json
exports/: admin.py  models.py
exports/migrations/: 0001_initial.py
scraping/: admin.py  models.py
scraping/browser/: browser_manager.py  page_fetcher.py
scraping/extraction/: aggregator.py  base.py  directory_links.py  portfolio_grid.py  press_release.py
scraping/management/commands/: run_scrape.py
scraping/migrations/: 0001_initial.py
scraping/normalization/: cleaners.py  location.py  url_tools.py
scraping/policies/: rate_limit.py  robots.py
scraping/services/: run_service.py  run_tracker.py  seed_service.py  target_service.py
