[project]
name = "atlas-slb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.0",
  "djangorestframework>=3.15",
  "python-dotenv>=1.0",
  "psycopg[binary]>=3.2",
  "playwright>=1.48",
  "celery>=5.4",
  "redis>=5.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
